# pascal-python-quickstart

./: .env.example  .gitignore  README.md  cli  pyproject.toml
docs/: onboarding_solana_key.md  onboarding_web_app.md
examples/: 01_market_context.py  02_place_order.py  03_cancel_order.py  04_simple_market_maker.py  05_register_deposit_address.py  06_register_trading_key.py  07_check_trading_key.py  08_trade_history_pagination.py  example_defaults.py  simple_market_maker_helpers.py
pascal_quickstart/: __init__.py  cli.py  config.py  crypto.py  http.py  market_data.py  signing.py
tests/: test_cli.py  test_market_data.py  test_signing_vectors.py
